--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                 <div class="card">
                     <div class="card__img">
-                        <img src="/img/medical-app.svg">
+                        <img src="/img/app_medical.svg">
                     </div>
 
                     <div class="card-contents">
