icon inmunulab correction

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
+        <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
 
     <script defer src="js/app.js"></script>
 </head>
@@ -166,7 +166,7 @@
 
                 <div class="card">
                     <div class="card__img">
-                        <img src="/img/app_medical.svg">
+                        <img src="img/medical-app.svg">
                     </div>
 
                     <div class="card-contents">
@@ -257,8 +257,7 @@
 
                 <textarea placeholder="Enter a message" class="contact-form__input" id="message" required></textarea>
 
-                <input type="button" value="Send Message" class="contact-form__input contact-form__input--send"
-                    onclick="sendMail()">
+                <input type="button" value="Send Message" class="contact-form__input contact-form__input--send" onclick="sendMail()">
 
             </form>
         </div>
